--- a/SURGE_iOS/Info.plist
+++ b/SURGE_iOS/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>SURGE_iOS</string>
+	<string>SURGEPOC</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.your-company.SURGE_iOS</string>
+	<string>com.your-company.SURGEPOC</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
