--- a/SURGE_iOS/SURGE_iOS.csproj
+++ b/SURGE_iOS/SURGE_iOS.csproj
@@ -214,6 +214,13 @@
     <BundleResource Include="Resources\Default.png" />
     <BundleResource Include="Resources\Default%402x.png" />
     <BundleResource Include="Resources\Default-568h%402x.png" />
+    <BundleResource Include="Resources\Splash\29_29.png" />
+    <BundleResource Include="Resources\Splash\57_57.png" />
+    <BundleResource Include="Resources\Splash\58_58.png" />
+    <BundleResource Include="Resources\Splash\80_80.png" />
+    <BundleResource Include="Resources\Splash\114_114.png" />
+    <BundleResource Include="Resources\Splash\120_120.png" />
+    <BundleResource Include="Resources\Envision.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\icons\" />
