--- a/SURGE_iOS/SURGE_iOS.csproj
+++ b/SURGE_iOS/SURGE_iOS.csproj
@@ -78,8 +78,8 @@
     <MtouchArch>ARMv7, ARM64</MtouchArch>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <IpaIncludeArtwork>true</IpaIncludeArtwork>
-    <CodesignKey>iPhone Distribution</CodesignKey>
-    <CodesignProvision>Automatic:AdHoc</CodesignProvision>
+    <CodesignKey>iPhone Distribution: Streamlined Medical Solutions, LLC (V9584S5W69)</CodesignKey>
+    <CodesignProvision>764c113b-7889-4695-94e7-35952221c308</CodesignProvision>
     <BuildIpa>true</BuildIpa>
     <MtouchUseRefCounting>true</MtouchUseRefCounting>
     <MtouchI18n>west</MtouchI18n>
